<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_home"
    tools:context=".HomepageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/uiot"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/ic_uiot_blue" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/ic_language"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_covn" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView

            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_main" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/singin"
            android:layout_width="147dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_button"
            android:text="@string/signIN"
            android:textSize="17dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view3"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="90dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/line" />

        <TextView
            android:id="@+id/or"
            android:layout_width="49dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="5dp"
            android:textAlignment="center"
            android:text="@string/or"
            android:textColor="#80000000"
            android:textSize="18dp"
            android:textStyle="bold" />

        <View
            android:id="@+id/line_2"
            android:layout_width="90dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/line" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/view4"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/singup"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button"
            android:text="@string/signUP"
            android:textSize="17dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/continuewithgoogle"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/continueWithGoogle"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reset_your"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/resetPassword"
            android:textColor="#4D000000"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>