<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_register"
    android:orientation="vertical"
    tools:context=".ResetPasswordActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/uiot"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/ic_uiot" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/ic_language"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_covn" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="287dp"
        android:layout_height="143dp"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_main" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/messageResetPassword"
        android:textColor="@android:color/white"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_editext"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:hint="@string/enterRegisteredEmail"
        android:inputType="textEmailAddress"
        android:paddingLeft="5dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/icon_backsquare"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="Back Button"
            android:textColor="@color/blue"
            app:rippleColor="#ECE5E5" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <Button
            android:id="@+id/reset_password"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/back"
            android:backgroundTint="#ffffff"
            android:text="@string/send"
            android:textColor="@color/blue"
            android:textSize="17dp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>